# zixun-test

./: .gitignore  AGENTS.md  MEMORY.md  README.md  config.example.py  hunyuan_gen.py  nano_pro_gen.py  pyproject.toml  requirements.txt  score.md  seedream_gen.py  wanx_gen.py
HPSv2_evaluation/: __init__.py  evaluate_hpsv2.py  hpsv2_scorer.py  run_evaluation.py
Image-to-Image/: hunyuan_img2img.py  seedream_img2img.py  wanx_img2img.py
OneIG-Bench/: inference_adapter.py  oneig_eval_gen.py  oneig_gen.py
Text-to-Image/: hunyuan_gen.py  nano_pro_gen.py  seedream_gen.py  wanx_gen.py
docs/: api.md  architecture.md  workflow.md
report/: report.md
skills/: bug-fix.md  code-review.md  feature-generation.md  testing.md
